test(project): тестирование функционала

--- a/backend/templates/email/email.html
+++ b/backend/templates/email/email.html
@@ -39,7 +39,7 @@
                 <p>С наилучшими пожеланиями, Hush Time.</p>
                 <br>
                 <p>Наши контакты:</p>
-                    <a class="link" href="https://hush-time.tilda.ws">Сайт</a><br>
+                    <a class="link" href="https://hush-time.ru">Сайт</a><br>
                     <a class="link" href="https://t.me/HushTime">Магазин в телеграм</a><br>
                     <a class="link" href="https://t.me/hush_time">Швейный блог</a><br>
                     <a class="link" href="https://t.me/kris_sas">Поддержка в телеграм</a><br>
