feat(email): получение ошибки при отправке письма

--- a/backend/templates/email/email.html
+++ b/backend/templates/email/email.html
@@ -31,7 +31,7 @@
         <div class="email-container">
             <div class="header">Hush Time</div>
             <div class="main-text">
-                <p>Здравствуйте, {{ client_name }}!</p>
+                <p>Здравствуйте, {{ client }}!</p>
                 <p>Благодарим вас за покупку выкройки в нашем магазине.</p>
                 <p>Надеемся, она станет отличным инструментом для ваших швейных проектов.</p>
                 <p>Все выкройки предназначены для печати на формате А4.</p>
