--- a/backend/templates/email/email.html
+++ b/backend/templates/email/email.html
@@ -42,7 +42,7 @@
                     <a class="link" href="https://hush-time.ru">Сайт</a><br>
                     <a class="link" href="https://t.me/HushTime">Магазин в телеграм</a><br>
                     <a class="link" href="https://t.me/hush_time">Швейный блог</a><br>
-                    <a class="link" href="https://t.me/kris_sas">Поддержка в телеграм</a><br>
+                    <a class="link" href="https://t.me/jernott">Поддержка в телеграм</a><br>
             </div>
         </div>
     </body>
